--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Robin – Freelance .NET Backend Developer</title>
+  <title>Robin – Freelance .NET Developer</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="hero">
-    <div class="container">
-      <h1>Hi, I'm Robin</h1>
-      <p class="subtitle">Freelance .NET Backend Developer available for part-time contracts</p>
+    <div class="hero-content">
+      <h1>Robin</h1>
+      <p class="subtitle">Freelance .NET Backend Developer</p>
+      <p class="tagline">Available for part-time or project-based contracts</p>
     </div>
   </header>
 
   <main class="container">
     <section class="contact-section">
-      <h2>Contact Me</h2>
+      <h2>Let's Work Together</h2>
+      <p>Send me a message and I’ll get back to you within 24 hours.</p>
       <form action="https://formspree.io/f/mrbkjwke" method="POST" class="contact-form">
         <label>
           Name
@@ -37,7 +39,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Robin – Built with HTML & CSS, hosted on GitHub Pages</p>
+    <p>&copy; 2025 Robin | Built with HTML & CSS | Hosted on GitHub Pages</p>
   </footer>
 </body>
 </html>
